--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/sagarrawatuk/Library/Android/sdk
-flutter.sdk=/Users/sagarrawatuk/fvm/versions/3.7.12
+sdk.dir=/Users/fusionsd/Library/Android/sdk
+flutter.sdk=/Users/fusionsd/flutter
